--- a/src/sass/sections/_make-order-modal.scss
+++ b/src/sass/sections/_make-order-modal.scss
@@ -30,7 +30,8 @@
     position: absolute;
     right: 21px;
     top: 21px;
-    background: url("./../assets/img/icons/close-btn.svg") center center/cover no-repeat;
+    background: url('./../assets/img/icons/close-btn.svg') center center/cover
+      no-repeat;
   }
   &_active {
     display: block;
@@ -45,16 +46,17 @@
     margin: 0 auto;
     padding: 40px 0 10px;
     overflow-y: scroll;
+    overflow-x: hidden;
 
     &::-webkit-scrollbar {
       width: 14px;
     }
     &::-webkit-scrollbar-thumb {
-      background: #33394F;
+      background: #33394f;
       border-radius: 13px;
     }
     &::-webkit-scrollbar-track {
-      background: #7D808E;
+      background: #7d808e;
       border-radius: 13px;
     }
   }
@@ -84,7 +86,7 @@
     gap: 10px;
     width: 100%;
     border-radius: 10px;
-    background: #F4F4F4;
+    background: #f4f4f4;
   }
   &__popup {
     display: flex;
@@ -116,7 +118,7 @@
   &__comment {
     width: 493px;
     font-size: 14px;
-    color: #B3B7CB;
+    color: #b3b7cb;
     margin-bottom: 5px;
   }
 
@@ -136,12 +138,11 @@
       margin-left: 34px;
 
       .form__input-plus-mobile {
-        display: none
+        display: none;
       }
     }
-
   }
-  input[type=radio] {
+  input[type='radio'] {
     display: block;
   }
   &__input-label {
@@ -150,7 +151,7 @@
     font-size: 14px;
 
     &_small {
-      color: #B3B7CB;
+      color: #b3b7cb;
       font-size: 14px;
     }
   }
@@ -158,7 +159,7 @@
     width: 24px;
     height: 24px;
     border-radius: 2px;
-    border: 1px solid #33394F;
+    border: 1px solid #33394f;
     accent-color: $text-color;
   }
   &__input-text {
@@ -166,18 +167,18 @@
     height: 40px;
     border-radius: 5px;
     padding-left: 5px;
-    background: #DEDFE1;
+    background: #dedfe1;
 
     &:invalid {
-      border: 1px solid #F88;
-      background: #E1DEDE;
+      border: 1px solid #f88;
+      background: #e1dede;
     }
   }
   &__price {
     margin-left: 10px;
     padding: 3px 14px 5px;
     border-radius: 13.5px;
-    background: #F7D05E;
+    background: #f7d05e;
     font-size: 14px;
   }
   &__description {
@@ -186,7 +187,7 @@
 
     &__text {
       width: 784px;
-      color: #B3B7CB;
+      color: #b3b7cb;
       font-size: 14px;
     }
   }
@@ -288,7 +289,7 @@
   }
   .form__price {
     position: absolute;
-    background: #BCBCBC;
+    background: #bcbcbc;
     top: -25px;
     left: 65%;
   }
@@ -302,7 +303,6 @@
     margin-left: 31px;
   }
   .form__item__addon {
-
     .form__input-radio {
       visibility: hidden;
     }
@@ -333,10 +333,16 @@
 }
 
 @media (max-width: 576px) {
+  .make-order-modal {
+    &__wrapper {
+      &::-webkit-scrollbar {
+        width: 0;
+      }
+    }
+  }
 }
 
 @media (max-width: 500px) {
-
 }
 @media (max-width: 400px) {
 }
